src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --button-color: #3730a3;
  --button-bg-color: #ffffff;
  --heading-color: #4338ca;
  --main-heading-color: #1f2937;
  --text-color: #6b7280;
  --background-color: #ffffff;
  --footercolor: #f9f9f9;
}

[data-theme='dark'] {
  --button-color: #e1e1ff;
  --button-bg-color: #383838;
  --heading-color: #b7aaff;
  --main-heading-color: #aebccf;
  --text-color: #ffffff;
  --background-color: #252128;
  --footercolor: #141414;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
  font-family: 'Inter', sans-serif;
  scroll-behavior: smooth;
}

@media (max-width: 640px) {
  html {
    font-size: 12px;
  }
}

